chore: implement live sessions
